--- a/src/Components/FoodList.css
+++ b/src/Components/FoodList.css
@@ -41,14 +41,14 @@ p{
   }
   
   .App-header {
-    background-color: rgb(212, 95, 95);
+    background-color: rgb(255, 252, 0);
     height: 150px;
     padding: 20px;
-    color: white;
+    color: black;
   }
   
   .App-title {
-    font-size: 3em;
+    font-size: 4em;
     text-align: center;
   }
   
@@ -61,3 +61,24 @@ p{
     to { transform: rotate(360deg); }
   }
   
+.logoNav{
+    max-height:80px;
+    position: absolute;
+}
+
+.fbButton{
+  float: right;
+  margin-top: "100px"
+}
+
+.pinButton{
+  float: right;
+}
+.twitButton{
+  float: right;
+}
+
+.shareButtons{
+  padding-top: "70px";
+  margin-top: "70px";
+}
