--- a/src/Components/FoodList.css
+++ b/src/Components/FoodList.css
@@ -1,9 +1,5 @@
-img {
-    max-width:300px;
-    max-height:450px;
-    width:auto;
-    height:auto;
-    float: left;
+.rowImages {
+  width: 100%
 }
 
 table { 
@@ -31,10 +27,6 @@ p{
     text-align: center;
 }
 
-.rating_component{
-    margin-left: 35%; 
-    margin-right:auto;
-}
 
 .App {
     text-align: center;
@@ -45,18 +37,20 @@ p{
     height: 80px;
   }
   
-  .FoodList-Header
+  .FoodList-header
    {
     background-color: rgb(255, 252, 0);
     height: 150px;
     padding: 20px;
     color: black;
-    width: "960px";
+    width: auto;
+
   }
   
   .FoodList-Title {
-    font-size: 4em;
+    font-size: 7vw;
     text-align: center;
+    vertical-align: center;
   }
   
   .App-intro {
@@ -69,20 +63,18 @@ p{
   }
   
 .logoNav{
-    max-height:80px;
-    position: absolute;
+    max-height:5vw;
+    width: auto;
+    line-height: 90px;
+    
 }
 
 .fbButton{
-  float: right;
-  margin-top: "100px"
 }
 
 .pinButton{
-  float: right;
 }
 .twitButton{
-  float: right;
 }
 
 
@@ -101,8 +93,28 @@ p{
 h3{
   text-align: center;
   font-weight: 900;
+  font-size: 4vw;
 }
 
 .detailColor{
   color: grey;
+}
+
+.rowEntry{
+  border: solid;
+  padding: 20px;
+  border-radius: 20px;
+  margin: 20px;
+}
+
+.translateBar{
+  width: auto;
+}
+
+@media only screen and (max-width: 640px){
+  .FoodList-Title {
+    font-size: 10vw;
+    text-align: center;
+    vertical-align: center;
+  }
 }
